--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.17.0"
+        "@symfony/webpack-encore": "^0.19.0",
+        "node-sass": "^4.7.2",
+        "sass-loader": "^6.0.6"
     },
-    "license": "UNLICENSED",
+    "license": "MIT",
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "bootstrap": "^4.0.0",
+        "holderjs": "^2.9.0",
+        "jquery": "^3.3.0",
+        "jquery-slim": "^3.0.0",
+        "popper.js": "^1.12.0"
     }
 }
