--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
     "license": "MIT",
     "description": "A skeleton to start a new Symfony website",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.0",
         "ext-iconv": "*",
+        "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0",
