--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.20.0",
+        "node-sass": "^4.9.3",
+        "sass-loader": "^7.1.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "MIT",
@@ -12,9 +14,9 @@
         "build": "encore production"
     },
     "dependencies": {
-        "jquery": "^3.3.1",
         "bootstrap": "^4.1.3",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.3.1",
         "popper.js": "^1.14.3"
     }
 }
