--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0",
-        "node-sass": "^4.7.2",
-        "sass-loader": "^6.0.6"
+        "@symfony/webpack-encore": "^0.20.0",
+        "webpack-notifier": "^1.6.0"
     },
     "license": "MIT",
     "private": true,
@@ -13,10 +12,9 @@
         "build": "encore production"
     },
     "dependencies": {
-        "bootstrap": "^4.0.0",
-        "holderjs": "^2.9.0",
-        "jquery": "^3.3.0",
-        "jquery-slim": "^3.0.0",
-        "popper.js": "^1.12.0"
+        "jquery": "^3.3.1",
+        "bootstrap": "^4.1.3",
+        "font-awesome": "^4.7.0",
+        "popper.js": "^1.14.3"
     }
 }
