--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.2.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-pdo": "*",
         "beberlei/DoctrineExtensions": "^1.0",
         "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
