--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mavroprovato/symfony-cms",
     "type": "project",
     "license": "MIT",
-    "description": "A skeleton to start a new Symfony website",
+    "description": "A sample CMS application created with the Symfony PHP framework.",
     "require": {
         "php": "^7.2.0",
         "ext-ctype": "*",
@@ -12,6 +12,7 @@
         "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
