--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "ext-pdo": "*",
         "beberlei/DoctrineExtensions": "^1.0",
+        "fresh/doctrine-enum-bundle": "~6.2",
         "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
