--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,9 +11,10 @@ doctrine:
         driver: 'pdo_mysql'
         server_version: '5.7'
         charset: utf8mb4
+        url: '%env(DATABASE_URL)%'
 
-        # With Symfony 3.3, remove the `resolve:` prefix
-        url: '%env(resolve:DATABASE_URL)%'
+        types:
+            ContentStatusType: App\DBAL\Types\ContentStatusType
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
