--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-pdo": "*",
         "beberlei/DoctrineExtensions": "^1.0",
         "fresh/doctrine-enum-bundle": "~6.2",
+        "friendsofsymfony/user-bundle": "~2.0",
         "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
@@ -23,7 +24,7 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "*",
-        "symfony/security-bundle": "*",
+        "symfony/security-bundle": "4.1.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "*",
