--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,2 @@
-#index:
-#    path: /
-#    controller: App\Controller\PostController::index
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
