--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "ext-pdo": "*",
         "beberlei/DoctrineExtensions": "^1.0",
+        "eko/feedbundle": "^1.2",
         "fresh/doctrine-enum-bundle": "~6.2",
         "friendsofsymfony/user-bundle": "~2.1",
         "knplabs/knp-paginator-bundle": "^2.7",
