--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "beberlei/DoctrineExtensions": "^1.0",
         "eko/feedbundle": "^1.2",
         "fresh/doctrine-enum-bundle": "~6.2",
+        "friendsofsymfony/elastica-bundle": "^5.0",
         "friendsofsymfony/user-bundle": "~2.1",
         "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
