--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "build": "encore production"
     },
     "dependencies": {
+        "@coreui/coreui": "2.1.3",
         "bootstrap": "^4.1.3",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
-        "popper.js": "^1.14.3"
+        "popper.js": "^1.14.3",
+        "simple-line-icons": "^2.4.1"
     }
 }
