--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,9 +19,10 @@ security:
             logout:     true
 
             form_login:
-                provider:   fos_userbundle
-                login_path: fos_user_security_login
-                check_path: fos_user_security_check
+                provider:               fos_userbundle
+                login_path:             fos_user_security_login
+                check_path:             fos_user_security_check
+                default_target_path:    posts
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
