--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,10 @@ security:
             algorithm: argon2i
 
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_AUTHOR: ROLE_CONTRIBUTOR
+        ROLE_EDITOR: ROLE_AUTHOR
+        ROLE_ADMIN: ROLE_EDITOR
 
     providers:
         fos_userbundle:
@@ -27,8 +30,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_CONTRIBUTOR }
+        - { path: ^/profile, roles: ROLE_USER }
 
 fos_user:
     db_driver: orm
