--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^4.1.3",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
+        "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.14.3",
         "simple-line-icons": "^2.4.1"
     }
